--- a/manager/public/index.html
+++ b/manager/public/index.html
@@ -159,7 +159,9 @@
                 <thead>
                     <tr style="border-bottom: 1px solid #334155;">
                         <th style="padding: 0.5rem;">Service</th>
-                        <th style="padding: 0.5rem;">Container Name (Host)</th>
+                        <th style="padding: 0.5rem;">Status</th>
+                        <th style="padding: 0.5rem;">CPU</th>
+                        <th style="padding: 0.5rem;">RAM</th>
                         <th style="padding: 0.5rem;">Port</th>
                         <th style="padding: 0.5rem;">Action</th>
                     </tr>
@@ -240,7 +242,7 @@
         // Details Logic
         let currentSite = null;
 
-        function showDetails(site) {
+        async function showDetails(site) {
             currentSite = site;
             document.getElementById('detailDomain').innerText = site.name;
 
@@ -252,20 +254,49 @@
                 { name: 'Database', host: `${safeName}-db-1`, port: 3306, extPort: site.dbPort },
                 { name: 'PhpMyAdmin', host: `${safeName}-pma-1`, port: 80, extPort: site.pmaPort },
                 { name: 'SFTP', host: `${safeName}-sftp-1`, port: 22, extPort: site.sftpPort },
+                { name: 'Redis', host: `${safeName}-redis-1`, port: 6379, extPort: '-' },
             ];
 
+            // Render initial table with loaders
             tbody.innerHTML = services.map(s => `
-                <tr style="border-bottom: 1px solid #1e293b;">
-                    <td style="padding: 0.8rem 0.5rem;">${s.name}</td>
-                    <td style="padding: 0.8rem 0.5rem; font-family:monospace; color:var(--accent);">${s.host}</td>
+                <tr style="border-bottom: 1px solid #1e293b;" id="row-${s.host}">
+                    <td style="padding: 0.8rem 0.5rem;">
+                        <div>${s.name}</div>
+                        <div style="font-size:0.75rem; color:var(--text-secondary); font-family:monospace;">${s.host}</div>
+                    </td>
+                    <td style="padding: 0.8rem 0.5rem;" class="stat-status"><span style="color:var(--text-secondary);">...</span></td>
+                    <td style="padding: 0.8rem 0.5rem; font-family:monospace;" class="stat-cpu">-</td>
+                    <td style="padding: 0.8rem 0.5rem; font-family:monospace;" class="stat-ram">-</td>
                     <td style="padding: 0.8rem 0.5rem; font-family:monospace;">${s.extPort}</td>
                     <td style="padding: 0.8rem 0.5rem;">
-                        <button onclick="navigator.clipboard.writeText('${s.host}')" style="background:transparent; border:1px solid #334155; padding:0.2rem 0.5rem; border-radius:4px; cursor:pointer; font-size:0.8rem;">Copy Host</button>
+                        <button onclick="navigator.clipboard.writeText('${s.host}')" style="background:transparent; border:1px solid #334155; padding:0.2rem 0.5rem; border-radius:4px; cursor:pointer; font-size:0.8rem;">Copy ID</button>
                     </td>
                 </tr>
             `).join('');
 
             openModal('detailsModal');
+
+            // Fetch Stats
+            try {
+                const res = await fetch('/api/stats');
+                if (res.ok) {
+                    const stats = await res.json();
+                    services.forEach(s => {
+                        const containerStat = stats.find(st => st.Name === s.host || st.Name.includes(s.host) || st.ID === s.host);
+                        const row = document.getElementById(`row-${s.host}`);
+                        if (row && containerStat) {
+                             // Status (Assuming running if in stats, docker stats only shows running by default)
+                            row.querySelector('.stat-status').innerHTML = '<span style="color:var(--success);">● Running</span>';
+                            row.querySelector('.stat-cpu').innerText = containerStat.CPUPerc;
+                            row.querySelector('.stat-ram').innerText = containerStat.MemPerc;
+                        } else if (row) {
+                            row.querySelector('.stat-status').innerHTML = '<span style="color:#ef4444;">○ Stopped</span>';
+                        }
+                    });
+                }
+            } catch (e) {
+                console.error("Stats fetch failed", e);
+            }
         }
 
         function confirmDelete() {
